Add class AutoMOEADPermutation