@@ -14,11 +14,9 @@ import org.uma.jmetal.auto.parameter.StringParameter;
 import org.uma.jmetal.auto.parameter.catalogue.AggregationFunctionParameter;
 import org.uma.jmetal.auto.parameter.catalogue.CreateInitialSolutionsParameter;
 import org.uma.jmetal.auto.parameter.catalogue.CrossoverParameter;
-import org.uma.jmetal.auto.parameter.catalogue.DifferentialEvolutionCrossoverParameter;
 import org.uma.jmetal.auto.parameter.catalogue.ExternalArchiveParameter;
 import org.uma.jmetal.auto.parameter.catalogue.MutationParameter;
 import org.uma.jmetal.auto.parameter.catalogue.ProbabilityParameter;
-import org.uma.jmetal.auto.parameter.catalogue.RepairDoubleSolutionStrategyParameter;
 import org.uma.jmetal.auto.parameter.catalogue.SelectionParameter;
 import org.uma.jmetal.auto.parameter.catalogue.SequenceGeneratorParameter;
 import org.uma.jmetal.auto.parameter.catalogue.VariationParameter;
@@ -36,8 +34,8 @@ import org.uma.jmetal.component.catalogue.ea.selection.impl.PopulationAndNeighbo
 import org.uma.jmetal.component.catalogue.ea.variation.Variation;
 import org.uma.jmetal.problem.Problem;
 import org.uma.jmetal.problem.ProblemFactory;
-import org.uma.jmetal.problem.doubleproblem.DoubleProblem;
-import org.uma.jmetal.solution.doublesolution.DoubleSolution;
+import org.uma.jmetal.problem.permutationproblem.PermutationProblem;
+import org.uma.jmetal.solution.permutationsolution.PermutationSolution;
 import org.uma.jmetal.util.aggregationfunction.AggregationFunction;
 import org.uma.jmetal.util.archive.Archive;
 import org.uma.jmetal.util.neighborhood.Neighborhood;
@@ -49,7 +47,7 @@ import org.uma.jmetal.util.pseudorandom.JMetalRandom;
  *
  * @autor Antonio J. Nebro
  */
-public class AutoMOEAD implements AutoConfigurableAlgorithm {
+public class AutoMOEADPermutation implements AutoConfigurableAlgorithm {
   public List<Parameter<?>> autoConfigurableParameterList = new ArrayList<>();
   public List<Parameter<?>> fixedParameterList = new ArrayList<>();
   private StringParameter problemNameParameter;
@@ -57,11 +55,11 @@ public class AutoMOEAD implements AutoConfigurableAlgorithm {
   private PositiveIntegerValue randomGeneratorSeedParameter;
   private PositiveIntegerValue maximumNumberOfEvaluationsParameter;
   private CategoricalParameter algorithmResultParameter;
-  private ExternalArchiveParameter<DoubleSolution> externalArchiveParameter;
+  private ExternalArchiveParameter<PermutationSolution<Integer>> externalArchiveParameter;
   private PositiveIntegerValue populationSizeParameter;
   private PositiveIntegerValue offspringPopulationSizeParameter;
   private CreateInitialSolutionsParameter createInitialSolutionsParameter;
-  private SelectionParameter<DoubleSolution> selectionParameter;
+  private SelectionParameter<PermutationSolution<Integer>> selectionParameter;
   private VariationParameter variationParameter;
   private ProbabilityParameter neighborhoodSelectionProbabilityParameter;
   private IntegerParameter neighborhoodSizeParameter;
@@ -80,7 +78,7 @@ public class AutoMOEAD implements AutoConfigurableAlgorithm {
     return fixedParameterList;
   }
 
-  public AutoMOEAD() {
+  public AutoMOEADPermutation() {
     this.configure() ;
   }
 
@@ -137,56 +135,17 @@ public class AutoMOEAD implements AutoConfigurableAlgorithm {
   }
 
   private void variation() {
-    CrossoverParameter crossoverParameter = new CrossoverParameter(List.of("SBX", "BLX_ALPHA", "wholeArithmetic"));
+    CrossoverParameter crossoverParameter = new CrossoverParameter(List.of("PMX"));
     ProbabilityParameter crossoverProbability =
         new ProbabilityParameter("crossoverProbability");
     crossoverParameter.addGlobalParameter(crossoverProbability);
-    RepairDoubleSolutionStrategyParameter crossoverRepairStrategy =
-        new RepairDoubleSolutionStrategyParameter(
-            "crossoverRepairStrategy", Arrays.asList("random", "round", "bounds"));
-    crossoverParameter.addGlobalParameter(crossoverRepairStrategy);
-
-    RealParameter distributionIndex = new RealParameter("sbxDistributionIndex",5.0, 400.0);
-    crossoverParameter.addSpecificParameter("SBX", distributionIndex);
-
-    RealParameter alpha = new RealParameter("blxAlphaCrossoverAlphaValue",0.0, 1.0);
-    crossoverParameter.addSpecificParameter("BLX_ALPHA", alpha);
 
     MutationParameter mutationParameter =
-        new MutationParameter(Arrays.asList("uniform", "polynomial", "linkedPolynomial", "nonUniform"));
+        new MutationParameter(Arrays.asList("permutationSwap"));
 
     RealParameter mutationProbabilityFactor = new RealParameter("mutationProbabilityFactor",
         0.0, 2.0);
     mutationParameter.addGlobalParameter(mutationProbabilityFactor);
-    RepairDoubleSolutionStrategyParameter mutationRepairStrategy =
-        new RepairDoubleSolutionStrategyParameter(
-            "mutationRepairStrategy", Arrays.asList("random", "round", "bounds"));
-    mutationParameter.addGlobalParameter(mutationRepairStrategy);
-
-    RealParameter distributionIndexForPolynomialMutation =
-        new RealParameter("polynomialMutationDistributionIndex", 5.0, 400.0);
-    mutationParameter.addSpecificParameter("polynomial", distributionIndexForPolynomialMutation);
-
-    RealParameter distributionIndexForLinkedPolynomialMutation =
-        new RealParameter("linkedPolynomialMutationDistributionIndex",5.0, 400.0);
-    mutationParameter.addSpecificParameter("linkedPolynomial",
-        distributionIndexForLinkedPolynomialMutation);
-
-    RealParameter uniformMutationPerturbation =
-        new RealParameter("uniformMutationPerturbation",0.0, 1.0);
-    mutationParameter.addSpecificParameter("uniform", uniformMutationPerturbation);
-
-    RealParameter nonUniformMutationPerturbation =
-        new RealParameter("nonUniformMutationPerturbation", 0.0, 1.0);
-    mutationParameter.addSpecificParameter("nonUniform", nonUniformMutationPerturbation);
-
-    DifferentialEvolutionCrossoverParameter deCrossoverParameter =
-        new DifferentialEvolutionCrossoverParameter(List.of("RAND_1_BIN", "RAND_1_EXP", "RAND_2_BIN"));
-
-    RealParameter crParameter = new RealParameter("CR", 0.0, 1.0);
-    RealParameter fParameter = new RealParameter("F", 0.0, 1.0);
-    deCrossoverParameter.addGlobalParameter(crParameter);
-    deCrossoverParameter.addGlobalParameter(fParameter);
 
     offspringPopulationSizeParameter = new PositiveIntegerValue("offspringPopulationSize") ;
     offspringPopulationSizeParameter.value(1) ;
@@ -196,12 +155,10 @@ public class AutoMOEAD implements AutoConfigurableAlgorithm {
     variationParameter.addSpecificParameter("crossoverAndMutationVariation", crossoverParameter);
     variationParameter.addSpecificParameter("crossoverAndMutationVariation", mutationParameter);
     variationParameter.addSpecificParameter("crossoverAndMutationVariation", offspringPopulationSizeParameter);
-    variationParameter.addSpecificParameter("differentialEvolutionVariation", mutationParameter);
-    variationParameter.addSpecificParameter("differentialEvolutionVariation", deCrossoverParameter);
   }
 
   private void selection() {
-    selectionParameter = new SelectionParameter<>(Arrays.asList("populationAndNeighborhoodMatingPoolSelection"));
+    selectionParameter = new SelectionParameter<>(List.of("populationAndNeighborhoodMatingPoolSelection"));
     neighborhoodSelectionProbabilityParameter =
         new ProbabilityParameter("neighborhoodSelectionProbability");
     selectionParameter.addSpecificParameter(
@@ -210,7 +167,7 @@ public class AutoMOEAD implements AutoConfigurableAlgorithm {
 
   private void createInitialSolution() {
     createInitialSolutionsParameter =
-        new CreateInitialSolutionsParameter(Arrays.asList("random", "latinHypercubeSampling", "scatterSearch"));
+        new CreateInitialSolutionsParameter(List.of("random"));
   }
 
   private void algorithmResult() {
@@ -232,7 +189,7 @@ public class AutoMOEAD implements AutoConfigurableAlgorithm {
     }
   }
 
-  protected Problem<DoubleSolution> problem() {
+  protected Problem<PermutationSolution<Integer>> problem() {
     return ProblemFactory.loadProblem(problemNameParameter.value());
   }
 
@@ -241,13 +198,13 @@ public class AutoMOEAD implements AutoConfigurableAlgorithm {
    *
    * @return
    */
-  public EvolutionaryAlgorithm<DoubleSolution> create() {
+  public EvolutionaryAlgorithm<PermutationSolution<Integer>> create() {
     JMetalRandom.getInstance().setSeed(randomGeneratorSeedParameter.value());
 
-    Problem<DoubleSolution> problem = problem() ;
+    var problem = (PermutationProblem<PermutationSolution<Integer>>)problem();
 
-    Archive<DoubleSolution> archive = null;
-    Evaluation<DoubleSolution> evaluation ;
+    Archive<PermutationSolution<Integer>> archive = null;
+    Evaluation<PermutationSolution<Integer>> evaluation ;
     if (algorithmResultParameter.value().equals("externalArchive")) {
       externalArchiveParameter.setSize(populationSizeParameter.value());
       archive = externalArchiveParameter.getParameter();
@@ -257,8 +214,9 @@ public class AutoMOEAD implements AutoConfigurableAlgorithm {
     }
 
     var initialSolutionsCreation =
-        (SolutionsCreation<DoubleSolution>) createInitialSolutionsParameter.getParameter((DoubleProblem) problem,
-            populationSizeParameter.value());
+            (SolutionsCreation<PermutationSolution<Integer>>) createInitialSolutionsParameter.getParameter(
+                    problem,
+                    populationSizeParameter.value());
 
     Termination termination =
         new TerminationByEvaluations(maximumNumberOfEvaluationsParameter.value());
@@ -268,13 +226,8 @@ public class AutoMOEAD implements AutoConfigurableAlgorithm {
     mutationParameter.addNonConfigurableParameter("numberOfProblemVariables",
         problem.numberOfVariables());
 
-    if (mutationParameter.value().equals("nonUniform")) {
-      mutationParameter.addSpecificParameter("nonUniform", maximumNumberOfEvaluationsParameter);
-      mutationParameter.addNonConfigurableParameter("maxIterations",
-          maximumNumberOfEvaluationsParameter.value() / populationSizeParameter.value());
-    }
 
-    Neighborhood<DoubleSolution> neighborhood = null ;
+    Neighborhood<PermutationSolution<Integer>> neighborhood = null ;
 
     if (problem.numberOfObjectives() == 2) {
       neighborhood =
@@ -300,10 +253,10 @@ public class AutoMOEAD implements AutoConfigurableAlgorithm {
     selectionParameter.addNonConfigurableParameter("subProblemIdGenerator", subProblemIdGenerator);
     variationParameter.addNonConfigurableParameter("subProblemIdGenerator", subProblemIdGenerator);
 
-    var variation = (Variation<DoubleSolution>) variationParameter.getDoubleSolutionParameter();
+    var variation = (Variation<PermutationSolution<Integer>>) variationParameter.getPermutationSolutionParameter();
 
     var selection =
-        (PopulationAndNeighborhoodSelection<DoubleSolution>)
+        (PopulationAndNeighborhoodSelection<PermutationSolution<Integer>>)
             selectionParameter.getParameter(variation.getMatingPoolSize(), null);
 
     int maximumNumberOfReplacedSolutions = maximumNumberOfReplacedSolutionsParameter.value();
@@ -313,13 +266,13 @@ public class AutoMOEAD implements AutoConfigurableAlgorithm {
     var replacement =
         new MOEADReplacement<>(
             selection,
-            (WeightVectorNeighborhood<DoubleSolution>) neighborhood,
+            (WeightVectorNeighborhood<PermutationSolution<Integer>>) neighborhood,
             aggregativeFunction,
             subProblemIdGenerator,
             maximumNumberOfReplacedSolutions, normalizeObjectivesParameter.value());
 
-    class EvolutionaryAlgorithmWithArchive extends EvolutionaryAlgorithm<DoubleSolution> {
-      private Archive<DoubleSolution> archive ;
+    class EvolutionaryAlgorithmWithArchive extends EvolutionaryAlgorithm<PermutationSolution<Integer>> {
+      private Archive<PermutationSolution<Integer>> archive ;
       /**
        * Constructor
        *
@@ -332,18 +285,18 @@ public class AutoMOEAD implements AutoConfigurableAlgorithm {
        * @param replacement
        */
       public EvolutionaryAlgorithmWithArchive(String name,
-          SolutionsCreation<DoubleSolution> initialPopulationCreation,
-          Evaluation<DoubleSolution> evaluation, Termination termination,
-          Selection<DoubleSolution> selection, Variation<DoubleSolution> variation,
-          Replacement<DoubleSolution> replacement,
-          Archive<DoubleSolution> archive) {
+          SolutionsCreation<PermutationSolution<Integer>> initialPopulationCreation,
+          Evaluation<PermutationSolution<Integer>> evaluation, Termination termination,
+          Selection<PermutationSolution<Integer>> selection, Variation<PermutationSolution<Integer>> variation,
+          Replacement<PermutationSolution<Integer>> replacement,
+          Archive<PermutationSolution<Integer>> archive) {
         super(name, initialPopulationCreation, evaluation, termination, selection, variation,
             replacement);
         this.archive = archive ;
       }
 
       @Override
-      public List<DoubleSolution> result() {
+      public List<PermutationSolution<Integer>> result() {
         return archive.solutions() ;
       }
     }
